--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,26 +4,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorPrimary"
     android:gravity="center"
     tools:context=".MainActivity" >
 
     <EditText
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:clickable="false"
-        android:focusable="false"
-        android:background="#DDD"
-        android:padding="10dp"
-        android:layout_marginBottom="50dp"/>
+        android:visibility="gone"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:id="@+id/editText"/>
 
     <LinearLayout
-        android:id="@+id/layoutParent"
+        android:id="@+id/layoutEdiText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"/>
+
+    <LinearLayout
+        android:id="@+id/layoutButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_marginBottom="50dp"/>
+
+    <TextView
+        android:id="@+id/textResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/colorWhite"
+        android:textSize="14sp"/>
+
+
+
 
 </LinearLayout>
