--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,34 @@
     android:orientation="vertical"
     android:background="@color/colorPrimary"
     android:gravity="center"
+    android:paddingLeft="18dp"
+    android:paddingRight="18dp"
     tools:context=".MainActivity" >
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:layout_marginBottom="50dp">
+        <ImageView
+            android:id="@+id/life1"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/ic_like"/>
+        <ImageView
+            android:id="@+id/life2"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/ic_like"/>
+        <ImageView
+            android:id="@+id/life3"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/ic_like"/>
+    </LinearLayout>
 
     <EditText
         android:visibility="gone"
